--- a/scss/all-blocks/_collection.scss
+++ b/scss/all-blocks/_collection.scss
@@ -6,7 +6,7 @@
 
     .container {
         position: relative;
-        max-width: 1111px;
+        // max-width: 1111px;
         width: 100%;
         align-items: center;
         /* z-index: 6; */
@@ -28,7 +28,7 @@
         font-size: 150px;
         text-align: center;
         color: #83888F;
-        max-width: 1111px;
+        // max-width: 1111px;
         width: 100%;
         // mix-blend-mode: normal;
         opacity: 0.5;
@@ -45,9 +45,11 @@
     }
 
     &__img {
+        flex-shrink: 0;
         max-width: 256px;
         width: 100%;
         height: 193px;
+        flex-shrink: 0;
     }
 
     &__title {
@@ -68,11 +70,77 @@
 }
 
 @media only screen and (max-width: 1092px) {
+
+    .collection__heading {
+        font-size: 96px;
+    }
+    
     .collection__inner {
         flex-direction: column;
+        margin: 0 auto;
+
+        
 
         .collection__block {
             display: flex;
+            margin: 0 auto;
+            padding: 0 97px;   
+            column-gap: 36px;
+            margin-bottom: 32px;
+
+            .collection__text {
+                max-width: 282px;
+                text-align: left;
+                // margin-left: 36px;
+
+                .collection__p {
+                    text-align: left;
+                }
+            }
         }
     }
 }
+
+@media only screen and (max-width: 704px) {
+    .collection__heading {
+        font-size: 40px;
+        margin: 30px auto;
+        // max-width: 286px;
+        width: 100%;
+    }
+
+    .collection__block {
+        margin-left: 0;
+        display: flex;
+        flex-direction: column;
+        margin: 0 auto;
+
+        .collection__img {
+            flex-shrink: 0;
+            width: 200px;
+            min-width: 100%;
+        }
+
+        .collection__text {
+            max-width: 282px;
+            text-align: center;
+
+            .collection__title {
+                text-align: center;
+            }
+
+            .collection__p {
+                text-align: center;
+            }
+        }
+    }
+}
+
+@media only screen and (max-width: 524px) {
+    .collection__img {
+        flex-shrink: 0;
+        max-width: 200px;
+        width: 100%;
+    }
+}
+
