--- a/scss/all-blocks/_why.scss
+++ b/scss/all-blocks/_why.scss
@@ -1,10 +1,14 @@
 .why {
     .container {
-        align-items: center;
-        background-color: #2C343E;
-        border-radius: 10px;
-        height: 577px;
+        
+        // height: 577px;
         margin-bottom: 351px;
+
+        .why__inner {
+            align-items: center;
+            background-color: #2C343E;
+            border-radius: 10px;
+        }
     }
 
     &__title {
@@ -14,10 +18,12 @@
         font-size: 40px;
         color: #FEFCF7;
         text-align: center;
-        padding: 100px 475.5px 0 475.5px;
+        margin: 0 auto;
+        padding-top: 100px;
     }
 
     &__p {
+        max-width: 540px;
         font-family: "Barlow", sans-serif;
         font-style: normal;
         font-weight: normal;
@@ -25,15 +31,19 @@
         text-align: center;
         color: #FEFCF7;
         opacity: 0.8;
-        padding: 32px 370px 86px 370px;
+        padding-top: 32px;
+        margin: 0 auto;
     }
 
-    &__inner {
+    &__blocks {
+        width: 100%;
         position: static;
+        transform: translateY(40%);
         padding: 0 85px;
         display: flex;
         column-gap: 30px;
         align-items: center;
+        // margin: 0 auto;
         margin-bottom: 200px;
 
         .why__block {
@@ -88,5 +98,11 @@
             }
             
         }
+    }
+}
+
+@media only screen and (max-width: 1324px) {
+    .why__blocks {
+        padding: 0 auto;
     }
 }
