--- a/scss/all-blocks/_footer.scss
+++ b/scss/all-blocks/_footer.scss
@@ -1,117 +1,131 @@
-// @import './nav';
-
-.footer__inner {
-    margin-bottom: 135px;
-	display: flex;
-	align-items: center;
-	padding: 47px 85px;
-	background-color: #2c343e;
-	/* margin-bottom: 135px; */
-}
-
 .footer {
+    margin-bottom: 135px;
+    width: 100%;
 
-
-    // .logo-link {
-    //     margin-right: 103px;
-    // }
-
-    .nav__list {
-        margin-left: 103px;
-    }
-
-    .nav__link:hover {
-        color: #fefcf7;
-    }
-
-    .nav__link--active {
-        color: #FEFCF7;
-        text-decoration: none;
-        text-transform: uppercase;
-        font-family: 'Barlow', sans-serif;
-        font-weight: 700;
-        font-size: 12px;
-    }
-}
-
-.socials {
-	display: flex;
-	align-items: center;
-	margin: 0;
-	margin-left: auto;
-	padding: 0;
-	list-style-type: none;
-
-    &__item {
-        width: 24px;
-        height: 24px;
-    
-        &+& {
-            margin-left: 24px;
-        }
-
-        .socials__link {
-            text-decoration: none;
-
-            path {
-                transition: fill 0.3s ease;
-            }
-
-            &:hover path {
-                fill: #FDD6BA;
-                transition: fill 0.3s ease;
-            }
-        }
-    }
-}
-
-@media only screen and (max-width: 1044px) {
-    .footer__inner {
-        padding: 47px 45px;
+    .container {
         
-        .nav__list {
-            margin-left: 53px;
-        }
-    }
-}
+        .footer__inner {
+            display: flex;
+            align-items: center;
+            background-color: #2C343E;
+            padding: 27px 85px;
+            // justify-content: space-between;
+            column-gap: auto;
+            // padding: 47px 85px;
 
-@media only screen and (max-width: 854px) {
-    .footer__inner {
-        flex-direction: column;
-        align-items: center;
+            .nav {
+                margin-left: 103px;
+                // width: 100%;
+                .nav__list {
 
-        .logo-link {
-            margin-bottom: 32px;
-        }
+                    .nav__item {
 
-        .nav__list {
-            margin-left: 0;
-            margin-bottom: 65px;
-        }
+                        .nav__link {
 
-        .socials {
-            margin-left: 0;
-            flex-wrap: wrap;
-            column-gap: 24px;
-            
-            .socials__item {
-                margin-left: 0;
+                            &--active {
+                                color: #FEFCF7;
+                            }
+
+                            &:hover {
+                                color: #FEFCF7;
+                            }
+
+                        }
+                    }
+                }
+            }
+
+            .socials {
+
+                display: flex;
+                list-style-type: none;
+                margin-left: auto;
+
+                .socials__item {
+
+                    // &+& {
+                    //     margin-left: 24px;
+                    // }
+
+                    .socials__link {
+                        path {
+                            transition: fill 0.3s ease;
+                        }
+                    }
+
+                    .socials__link:hover {
+                        path {
+                            fill: #FDD6BA;
+                            transition: fill 0.3s ease;
+                        }
+                    }
+                }
+
+                .socials__item + .socials__item {
+                    margin-left: 24px;
+                }
             }
         }
     }
 }
 
-@media only screen and (max-width: 411px) {
-    .footer__inner {
+@media only screen and (max-width: 1020px) {
+    .footer {
+        .container {
+            .footer__inner {
+                align-items: center;
+                flex-direction: column;
+                padding: 54px auto;
 
-        .nav__list {
-            vertical-align: middle;
-            flex-direction: column;
-            margin-bottom: 25px;
+                .logo-link {
+                    margin-bottom: 32px;
+                }
+        
+                .nav {
+                    margin-left: 0;
+                    margin-bottom: 65px;
+                }
+        
+                .socials {
+                    padding-left: 0;
+                    align-items: center;
+                    margin: 0;
+                    margin-left: 0;
 
-            .nav__item {
-                margin-left: 0;
-                margin-bottom: 24px;
+                    .socials__item + .socials__item {
+                        margin-left: 24;
+                    }
+                }
+            }
+        }
+    }
+}
+
+@media only screen and (max-width: 604px) {
+    .footer {
+        .container {
+            .footer__inner {
+                padding: 54px 0;
+
+                .logo-link {
+                    margin-bottom: 48.5px;
+
+                    .logo-link__image {
+                        max-width: 218px;
+                        width: 100%;
+                    }
+                }
+
+                .nav {
+                    .nav__list {
+                        flex-direction: column;
+
+                        .nav__item {
+                            margin-left: 0;
+                            margin-bottom: 24px;
+                        }
+                    }
+                }
             }
         }
     }
