--- a/scss/all-blocks/_header.scss
+++ b/scss/all-blocks/_header.scss
@@ -1,44 +1,132 @@
-// @import './nav';
+.header{
+    color: #83888F;
+    background-color: none;
 
-.header {
     .container {
-	    display: flex;
-	    align-items: center;
-	    justify-content: space-between;
-	    padding: 44px 20px;
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+        padding: 43.5px 20px;
+
+        .header__menu-button {
+            color: #333D4B;
+            font-size: 30px;
+            font-weight: bold;
+            background-color: transparent;
+            border: none;
+            cursor: pointer;
+            display: none;
+        }
+
+        .nav {
+            .nav__list {
+                display: flex;
+                align-items: center;
+                margin: 0;
+                padding: 0;
+                list-style-type: none;
+
+                .nav__item {
+                    .nav__link {
+                        color: #83888F;
+                    }
+                }
+
+                .nav__item + .nav__item {
+                    margin-left: 33px;
+                }
+            }
+        }
     }
 }
 
-.logo-link__image {
-    width: 236px;
-    height: 26px;
+.header--active {
+    .nav {
+        .nav__list{
+            .nav__item {
+                .nav__link {
+                    font-family: 'Fraunces', serif;
+                    font-style: normal;
+                    font-weight: 900;
+                    font-size: 24px;
+                    line-height: 32px;
+                    text-align: center;
+                    color: #333D4B;
+                }
+            }
+        }
+    }
 }
 
-@media only screen and(max-width: 584px) {
-	.header {
-		.nav {
-			
-			.nav__list {
-				position: absolute;
-				width: 1px;
-				height: 1px;
-				margin: -1px;
-				border: 0;
-				padding: 0;
-				clip: rect(0 0 0 0);
-				overflow: hidden;
-			}
-	
-			&::before {
-				// margin: 3px 0;
-				display: inline-block;
-				width: 16px;
-				height: 15px;
-				background-repeat: no-repeat;
-				background-size: 16px 15px;
-				background-image: url(../icons/menu.svg);
-				content: '';
-			}
-		}
-	}
+@media only screen and (max-width: 602px) {
+    .header {
+        .container {
+            .header__link {
+                &__image {
+                    max-width: 163px;
+                    width: 100%;
+                }
+            }
+
+            .header__menu-button {
+                display: block;
+                // font-size: 10px;
+                z-index: 101;
+
+                span:nth-child(2) {
+                    display: none;
+                }
+            }
+
+            .nav {
+                display: none;
+            }
+        }
+    }
+
+    .header--active {
+        .container {
+
+            .header__menu-button {
+                span:nth-child(1) {
+                    display: none;
+                }
+
+                span:nth-child(2){
+                    display: block;
+                }
+            }
+
+            .nav {
+                margin-top: 80px;
+                position: absolute; /* fixed */
+                top: 0;
+                right: 0;
+                bottom: 0;
+                left: 0;
+                z-index: 100;
+                width: 100%;
+                height: 100%;
+                // background-color: rgba(225,225,225,0.5);
+                background: linear-gradient(180deg, white 50%, transparent 99.94%);
+                // transform: matrix(1, 0, 0, -1, 0, 0);
+                display: block;
+
+                &__list {
+                    display: flex;
+                    flex-direction: column;
+                    margin-top: 50px;
+
+                    .nav__item {
+                        margin-left: 0;
+                    }
+
+                    .nav__item + .nav__item {
+                        margin-left: 0;
+                        margin-top: 30px;
+                    }
+                }
+            }
+        }
+    }
 }
