--- a/scss/all-blocks/_hero.scss
+++ b/scss/all-blocks/_hero.scss
@@ -1,122 +1,240 @@
-.hero {
-    .container {
-        padding: 115px 85px;
-        background-image: url('../img/2x/first-page.png');
-        border-radius: 16px;
-        // background-repeat: no-repeat;
-        // background-position: center;
-        background-repeat: no-repeat;
-        // background-attachment: fixed;
-        background-position: left;
-        margin-bottom: 136px;
-        background-size: 0 0;
-        background-size: 1280px 600px;
-        // width: 1280px;
-        // height: 600px;
-    }
+.main {
+    .hero {
+        .container {
 
-    @media only screen and (-webkit-min-device-pixel-ratio: 2),
-        only screen and (min--moz-device-pixel-ratio: 2),
-        only screen and (-o-min-device-pixel-ratio: 2/1),
-        only screen and (min-device-pixel-ratio: 2),
-        only screen and (min-resolution: 192dpi),
-        only screen and (min-resolution: 2dppx) {
-            .container {
-                background-image: url('../img/2x/first-page@2x.png');
+            .hero__inner {
+
+                width: 100%;
+                height: 600px;
+                background-image: url(../img/2x/first-page.png);
+                // background-attachment: ;
+                padding: 115px 65px;
+                background-image: url('../img/2x/first-page.png');
+                // background-repeat: no-repeat;
                 // background-position: ;
-                background-size: 0 0;
+                // background-origin: content-box;
+                background-repeat: no-repeat;
+                margin-bottom: 136px;
                 background-size: 1280px 600px;
-            }
-        }
-
-
-    
-    &__heading {
-        width: 493px;
-        margin-top: 0;
-        margin-bottom: 32px;
-        font-weight: 900;
-        font-family: "Fraunces", serif;
-        font-size: 72px;
-        line-height: 72px;
-        color: #fefcf7;
-    }
-    
-    &__description {
-        width: 445px;
-        margin-top: 0;
-        margin-bottom: 56px;
-        font-size: 16px;
-        font-family: "Barlow", sans-serif;
-        font-weight: 400;
-        line-height: 26px;
-        color: #fefcf7;
-        opacity: 0.8;
-    }
-
-    .special__hero-container {
-        padding: 0;
-        padding: 137px 85px;
-        margin-bottom: 168px;
-        background-image: url('../img/2x/about-us.png');
-        background-size: 0 0;
-        background-size: 1280px 450px;
-        // width: 1280px;
-        // height: 450px;
-        /* height: 450px; */
-
-        .hero__heading {
-            // padding-top: 137px;
-            font-size: 40px;
-            margin-bottom: 24px;
-        }
+                max-width: 1280px;
+            
         
-        .hero__description {
-            font-size: 16px;
-            font-weight: normal;
-        }
-    }
+    
+            @media only screen and (-webkit-min-device-pixel-ratio: 2),
+                only screen and (min--moz-device-pixel-ratio: 2),
+                only screen and (-o-min-device-pixel-ratio: 2/1),
+                only screen and (min-device-pixel-ratio: 2),
+                only screen and (min-resolution: 192dpi),
+                only screen and (min-resolution: 2dppx) {
+                    .hero__inner {
+                        background-image: url('../img/2x/first-page@2x.png');
+                        // background-position: ;
+                        background-size: 1280px 600px;
+                    }
+                }
 
-    @media only screen and (-webkit-min-device-pixel-ratio: 2),
-        only screen and (min--moz-device-pixel-ratio: 2),
-        only screen and (-o-min-device-pixel-ratio: 2/1),
-        only screen and (min-device-pixel-ratio: 2),
-        only screen and (min-resolution: 192dpi),
-        only screen and (min-resolution: 2dppx) {
-            .special__hero-container {
-                background-image: url('../img/2x/about-us@2x.png');
-                // background-position: ;
-                background-size: 0 0;
-                background-size: 1280px 450px;
+                .hero__heading {
+                    margin: 0;
+                    padding: 0;
+                    max-width: 493px;
+                    width: 100%;
+                    font-family: 'Fraunces', serif;
+                    font-style: normal;
+                    font-weight: 900;
+                    font-size: 72px;
+                    line-height: 72px;
+                    color: #FEFCF7;
+                    margin-bottom: 32px;
+                }
+
+                .hero__description {
+                    margin: 0;
+                    padding: 0;
+                    max-width: 445px;
+                    width: 100%;
+                    font-family: 'Barlow', sans-serif;
+                    font-style: normal;
+                    font-weight: normal;
+                    font-size: 16px;
+                    line-height: 26px;
+                    color: #FEFCF7;
+                    mix-blend-mode: normal;
+                    opacity: 0.8;
+                    margin-bottom: 56px;
+                }
             }
         }
-
-    .create-plan__container {
-        padding: 134px 85px;
-        background-image: url('../img/2x/create-plan.png');
-        margin-bottom: 168px;
-        background-size: 0 0;
-        background-size: 1280px 450px;
-
-        .create-plan {
-            margin-bottom: 32px;
-        }
     }
-
-    @media only screen and (-webkit-min-device-pixel-ratio: 2),
-        only screen and (min--moz-device-pixel-ratio: 2),
-        only screen and (-o-min-device-pixel-ratio: 2/1),
-        only screen and (min-device-pixel-ratio: 2),
-        only screen and (min-resolution: 192dpi),
-        only screen and (min-resolution: 2dppx) {
-            .create-plan__container {
-                background-size: 0 0;
-                background-size: 1280px 450px;
-                background-image: url('../img/2x/create-plan@2x.png');
-                // background-position: ;
-               
-            }
-        }
 }
 
-// @media only screen and (max-width: )
+@media only screen and (max-width: 1028px) {
+    .main {
+        .hero {
+            .container {
+                .hero__inner {
+                    padding: 104px 58px;
+                    // background-image: url(../img/2x/first-page-tablet);
+                    background-position: 30% 0;
+                    // background-size: auto;
+                }
+            }
+        }
+    }
+}
+
+@media only screen and (max-width: 768px){
+    .main {
+        .hero {
+            .container {
+                .hero__inner {
+                    background-image: url(../img/2x/first-page-tablet.png);
+                    max-width: 689px;
+                    width: 100%;
+                    background-size: 689px 500px;
+                    margin: 0 auto;
+                    margin-bottom: 136px;
+                    background-position: top right;
+
+                    .hero__heading {
+                        font-family: 'Fraunces', serif;
+                        font-style: normal;
+                        font-weight: 900;
+                        font-size: 48px;
+                        line-height: 48px;
+                        color: #FEFCF7;
+                        max-width: 329px;
+                    }
+
+                    .hero__description {
+                        font-family: 'Barlow', sans-serif;
+                        font-style: normal;
+                        font-weight: normal;
+                        font-size: 15px;
+                        line-height: 25px;
+                        color: #FEFCF7;
+                        mix-blend-mode: normal;
+                        opacity: 0.8;
+                        max-width: 398px;
+                    }
+                }
+
+                @media only screen and (-webkit-min-device-pixel-ratio: 2),
+                only screen and (min--moz-device-pixel-ratio: 2),
+                only screen and (-o-min-device-pixel-ratio: 2/1),
+                only screen and (min-device-pixel-ratio: 2),
+                only screen and (min-resolution: 192dpi),
+                only screen and (min-resolution: 2dppx) {
+                    .hero__inner {
+                        background-image: url('../img/2x/first-page-tablet@2x.png');
+                        background-size: relative;
+                        background-size: 689px 500px;
+                        background-position: top right;
+                        // max-width: 689px;
+                        // max-height: 500px;
+                        width: 100%;
+                        // background-position: ;
+                        // background-size: 1280px 600px;
+                    }
+                }
+            }
+        }
+    }
+    
+}
+
+@media only screen and (max-width: 534px){
+    .main {
+        .hero {
+            .container {
+                .hero__inner {
+                    padding: 100px 24px;
+                    align-items: center;
+                    text-align: center;
+
+                    .hero__heading {
+                        margin-right: 0;
+                        margin: 0 auto;
+                        margin-bottom: 24px;
+                        max-width: 279px;
+                        width: 100%;
+                        font-family: 'Fraunces', serif;
+                        font-style: normal;
+                        font-weight: 900;
+                        font-size: 40px;
+                        line-height: 40px;
+                        text-align: center;
+                        color: #FEFCF7;
+                    }
+
+                    .hero__description {
+                        margin: 0;
+                        margin: 0 auto;
+                        margin-bottom: 39px;
+                        font-family: 'Barlow', sans-serif;
+                        font-style: normal;
+                        font-weight: normal;
+                        font-size: 15px;
+                        line-height: 25px;
+                        /* or 167% */
+                        
+                        text-align: center;
+                        
+                        color: #FEFCF7;
+                        
+                        mix-blend-mode: normal;
+                        opacity: 0.8;
+                    }
+                }
+            }
+        }
+    }
+}
+
+@media only screen and (max-width: 375px) {
+    .main {
+        .hero {
+            .container {
+                .hero__inner {
+                    background-image: url(../img/2x/first-page-mobilem.png);
+                    background-size: 327px 500px;
+                    background-position: center;
+                    border-radius: 10px;
+                    background-position: top;
+                    // padding: 50px 24px;
+                }
+
+                @media only screen and (-webkit-min-device-pixel-ratio: 2),
+                only screen and (min--moz-device-pixel-ratio: 2),
+                only screen and (-o-min-device-pixel-ratio: 2/1),
+                only screen and (min-device-pixel-ratio: 2),
+                only screen and (min-resolution: 192dpi),
+                only screen and (min-resolution: 2dppx) {
+                    .hero__inner {
+                        background-image: url('../img/2x/first-page-mobilem@2x.png');
+                        // background-size: relative;
+                        background-size: 327px 500px;
+                        // max-width: 689px;
+                        // max-height: 500px;
+                        width: 100%;
+                        // background-position: ;
+                        // background-size: 1280px 600px;
+                    }
+                }
+            }
+        }
+    }
+}
+
+@media only screen and (max-width: 336px) {
+    .main {
+        .hero {
+            .container {
+                .hero__inner {
+                    .hero__heading {
+                        font-size: 32px;
+                    }
+                }
+            }
+        }
+    }
+}
