--- a/scss/all-blocks/_header.scss
+++ b/scss/all-blocks/_header.scss
@@ -29,6 +29,15 @@
                 .nav__item {
                     .nav__link {
                         color: #83888F;
+
+                        &--active {
+                            color: #333D4B;
+                        }
+            
+                        &:hover {
+                            color: #333D4B;
+                            transition: color 0.6s ease;
+                        }
                     }
                 }
 
