New version: 1st page is now full responsive

--- a/scss/all-blocks/_why.scss
+++ b/scss/all-blocks/_why.scss
@@ -141,6 +141,8 @@
                     right: 50%;
                     bottom: 0;
                     transform: translate(50%, 50%);
+                    align-items: center;
+                    // margin-bottom: 120px;
 
                     .why__block {
                         display: flex;
@@ -148,18 +150,116 @@
                         margin-left: 0;
                         max-width: 573px;
                         width: 100%;
+                        padding: 41px 48px;
+                        align-items: center;
 
                         .block__icon {
+                            // align-self: center;
                             max-width: 56px;
                             max-height:56px;
                             width: 100%;
                             height: 100%;
+                            margin: 0;
+                            vertical-align: middle;
+                        }
+
+                        .why__text {
+                            margin-left: 55.5px;
+                            text-align: left;
+
+                            .block__title {
+                                margin: 0;
+                                margin-bottom: 16px;
+                                text-align: left;
+                            }
+
+                            .block__p {
+                                text-align: left;
+                                margin: 0;
+                            }
                         }
                     }
 
                     .why__block + .why__block {
                         margin-left: 0;
                         margin-top: 24px;
+                    }
+                }
+            }
+        }
+    }
+}
+
+@media only screen and (max-width: 639px) {
+    .why {
+        .container {
+            .why__inner {
+
+                height: 902px;
+                .why__title {
+                    margin: 0;
+                    margin: 0 24px;
+                    padding-top: 64px;
+                    font-size: 28px;
+                }
+
+                .why__p {
+                    margin: 0;
+                    margin: 0 24px;
+                    // margin-bottom: ;
+                }
+
+                .why__blocks {
+                    // margin-bottom: 220px;
+                    // padding-bottom: 120px;
+                    .why__block {
+                        flex-direction: column;
+                        align-items: center;
+                        text-align: center;
+                        max-width: 279px;
+                        width: 100%;
+                        padding: 0 33.5px;
+                        padding-top: 72px;
+                        padding-bottom: 51px;
+
+
+                        .block__icon {
+                            margin-bottom: 56px;
+                        } 
+
+                        .why__text {
+                            margin: 0;
+                            width: 212px;
+                            max-width: 100%;
+
+                            .block__title {
+                                text-align: center;
+                            }
+    
+                            .block__p {
+                                text-align: center;
+                            }
+                        }
+                    }
+                }
+            }
+        }
+    }
+}
+
+@media only screen and (max-width: 350px) {
+    .why {
+        .container {
+            .why__inner {
+                .why__blocks {
+                    margin-bottom: 120px;
+                    transform: translate(50%, 60%);
+                    .why__block {
+                        max-width: 259px;
+                        width: 100%;
+                        padding: 0 12.5px;
+                        padding-top: 72px;
+                        padding-bottom: 51px;
                     }
                 }
             }
