--- a/scss/all-blocks/_all-blocks.scss
+++ b/scss/all-blocks/_all-blocks.scss
@@ -9,4 +9,5 @@
 @import './commitent';
 @import './quality';
 @import './configure__list';
-@import './selection__configuration'
+@import './selection__configuration';
+@import './headquarters';
