Responsive: first and second pages

--- a/scss/all-blocks/_quality.scss
+++ b/scss/all-blocks/_quality.scss
@@ -1,5 +1,138 @@
 .quality {
+    margin-bottom: 168px;
+    // margin-top: 250px; //временно
     .container {
-        
+        .quality__inner {
+            display: flex;
+            border-radius: 10px;    
+            background-color: #2C343E;
+            position: relative;
+
+            .quality__text {
+                max-width: 540px;
+                width: 100%;
+                margin: 0;
+                margin-top: 88px;
+                margin-left: 85px;
+                margin-bottom: 176px;
+                // padding: 88px 85px;
+
+                .quality__title {
+                    font-family: 'Fraunces', serif;
+                    font-style: normal;
+                    font-weight: 900;
+                    font-size: 40px;
+                    line-height: 48px;
+                    /* identical to box height, or 120% */
+                    margin: 0;
+                    padding: 0;
+                    
+                    color: #FEFCF7;
+                    margin-bottom: 32px;
+                }
+
+                .quality__p {
+                    font-family: 'Barlow' sans-serif;
+                    font-style: normal;
+                    font-weight: normal;
+                    font-size: 16px;
+                    line-height: 26px;
+                    /* or 162% */
+                    margin: 0;
+                    padding: 0;
+                    
+                    color: #FEFCF7;
+                    
+                    mix-blend-mode: normal;
+                    opacity: 0.8;
+                }
+            }
+
+            .quality__picture img {
+                position: absolute;
+                top: 0;
+                // right: 50%;
+                left: 50%;
+                bottom: 0;
+                transform: translate(20%, -20%);
+                overflow: visible;
+                border-radius: 10px;
+            }
+        }
+    }
+}
+
+@media only screen and (max-width: 1170px) {
+    .quality {
+        .container {
+            .quality__inner {
+                align-items: center;
+                .quality__text {
+                    align-items: center;
+                    margin: 0 auto;
+                    margin-bottom: 67px;
+                    margin-top: 224px;
+                    text-align: center;
+                    // margin: 0 auto;
+
+                    .quality__title {
+                        text-align: center;
+                        font-size: 32px;
+                    }
+
+                    .quality__p {
+                        font-size: 15px;
+                        // margin-left: 0;
+                        text-align: center;
+                        line-height: 25px;
+                        // margin-bottom: 67px;
+                    }
+                }
+
+                .quality__picture img {
+                    transform: translate(-50% ,-50%);
+                }
+            }
+        }
+    }
+}
+
+@media only screen and (max-width: 636px) {
+    .quality {
+        .container {
+            .quality__inner {
+                .quality__text {
+                    
+                    margin: 0 24px;
+                    margin-bottom: 61px;
+                    margin-top: 142px;
+                    // max-width: ;
+
+
+                    .quality__title {
+                        font-size: 28px;
+                    }
+                }
+            }
+        }
+    }
+}
+
+@media only screen and (max-width: 342px) {
+    .quality {
+        .container {
+            .quality__inner {
+                .quality__text {
+                    margin: 0 10px;
+                    margin-bottom: 61px;
+                    margin-top: 142px;
+                }
+            
+                .quality__picture img {
+                    max-width: 250px;
+                    width: 100%;
+                }
+            }
+        }
     }
 }
