--- a/scss/all-blocks/_h-i-w__inner.scss
+++ b/scss/all-blocks/_h-i-w__inner.scss
@@ -23,6 +23,8 @@
     }
 }
 
+
+
 .h-i-w__inner {
     position: relative;
     .steps {
@@ -130,6 +132,38 @@
     }
 }
 
+.create-your-plan__h-i-w {
+    .container {
+        background-color: #2C343E;
+        margin-bottom: 120px;
+
+        padding: 0 105px;
+        padding-top: 100px;
+        padding-bottom: 100px;
+        // color: #FEFCF7;
+
+        .h-i-w__inner {
+            .steps {
+                .step {
+                    &__heading {
+                        &__text {
+                            color: #FEFCF7;
+                        }
+                    }
+
+                    &__text {
+                        color: #FEFCF7;
+                    }
+                }
+
+                .step::before {
+                    background-color: transparent;
+                }
+            }
+        }
+    }
+}
+
 @media only screen and (max-width: 1122px) {
     .h-i-w__inner {
         .steps {
@@ -167,6 +201,14 @@
     .h-i-w {
         .container {
             padding: 0 20px;
+        }
+    }
+
+    .create-your-plan__h-i-w {
+        .container {
+            padding: 0 20px;
+            padding-top: 97px;
+            padding-bottom: 97px;
         }
     }
 }
