--- a/scss/all-blocks/_biggest-part.scss
+++ b/scss/all-blocks/_biggest-part.scss
@@ -13,6 +13,10 @@
         .container {
             .biggest-part__inner {
                 align-items: center;
+
+                .selections {
+                    margin: 0 auto;
+                }
                 .configure__list {
                     display: none;
                 }
@@ -21,6 +25,27 @@
                     margin-left: 0;
                 }
             }
+        }
+    }
+}
+@media only screen and (max-width: 754px) {
+    .form__actions {
+        display: flex;
+        flex-direction: column;
+        column-gap: 0;
+
+        .congihuration__label {
+            max-width: 700px;
+            width: 100%;
+        }
+            
+        .configuration__controller {
+            max-width: 700px;
+            width: 100%; 
+       }
+
+        .configuration__label + .configuration__label {
+            margin-top: 16px;
         }
     }
 }
