--- a/scss/all-blocks/_selection__configuration.scss
+++ b/scss/all-blocks/_selection__configuration.scss
@@ -7,6 +7,7 @@
     margin-left: 40px;
 
     .configuration__inner {
+        // margin: 0 auto;
         width: 100%;
 
         form {
@@ -53,7 +54,7 @@
                     }
 
                     p {
-                        font-family: Barlow;
+                        font-family: 'Barlow', sans-serif;
                         font-style: normal;
                         font-weight: normal;
                         font-size: 16px;
@@ -93,8 +94,10 @@
 
                 .configuration__controller {
                     display: inline-block;
-                    width: 228px;
-                    height: 250px;
+                    max-width: 228px;
+                    max-height: 250px;
+                    width: 100%;
+                    height: 100%;
                     border: 0 solid #F4F1EB;
                     background-color: #F4F1EB;
                     border-radius: 8px;
